Fixed merge sort, and simplified some code

--- a/Algorithms_INCLASS.ipynb
+++ b/Algorithms_INCLASS.ipynb
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -310,21 +310,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[18], line 39\u001b[0m\n\u001b[0;32m     36\u001b[0m             k \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     37\u001b[0m         \u001b[39mreturn\u001b[39;00m a_list\n\u001b[1;32m---> 39\u001b[0m \u001b[39mprint\u001b[39m(mergeSort(\u001b[39minput\u001b[39;49m))\n",
-      "Cell \u001b[1;32mIn[18], line 8\u001b[0m, in \u001b[0;36mmergeSort\u001b[1;34m(a_list)\u001b[0m\n\u001b[0;32m      5\u001b[0m left_half \u001b[39m=\u001b[39m a_list[:middle]\n\u001b[0;32m      6\u001b[0m right_half \u001b[39m=\u001b[39ma_list[middle:]\n\u001b[1;32m----> 8\u001b[0m mergeSort(left_half)\n\u001b[0;32m      9\u001b[0m mergeSort(right_half)\n\u001b[0;32m     11\u001b[0m i \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m \u001b[39m#left half pointer\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[18], line 9\u001b[0m, in \u001b[0;36mmergeSort\u001b[1;34m(a_list)\u001b[0m\n\u001b[0;32m      6\u001b[0m right_half \u001b[39m=\u001b[39ma_list[middle:]\n\u001b[0;32m      8\u001b[0m mergeSort(left_half)\n\u001b[1;32m----> 9\u001b[0m mergeSort(right_half)\n\u001b[0;32m     11\u001b[0m i \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m \u001b[39m#left half pointer\u001b[39;00m\n\u001b[0;32m     12\u001b[0m j \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m \u001b[39m# right half pointer\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[18], line 34\u001b[0m, in \u001b[0;36mmergeSort\u001b[1;34m(a_list)\u001b[0m\n\u001b[0;32m     31\u001b[0m     k \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m\n\u001b[0;32m     33\u001b[0m \u001b[39mwhile\u001b[39;00m j \u001b[39m<\u001b[39m\u001b[39mlen\u001b[39m(right_half):\n\u001b[1;32m---> 34\u001b[0m     a_list[k] \u001b[39m-\u001b[39m right_half[j]\n\u001b[0;32m     35\u001b[0m     j \u001b[39m+\u001b[39m\u001b[39m-\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     36\u001b[0m     k \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 5, 5, 6, 8, 9]\n"
      ]
     }
    ],
@@ -363,7 +356,7 @@
     "\n",
     "        while j <len(right_half):\n",
     "            a_list[k] - right_half[j]\n",
-    "            j +- 1\n",
+    "            j += 1\n",
     "            k += 1\n",
     "        return a_list\n",
     "\n",
@@ -411,7 +404,7 @@
     "        else:\n",
     "            target > potential_match\n",
     "            left = middle + 1\n",
-    "    return f'Target not in list'\n",
+    "    return 'Target not in list' \n",
     "\n",
     "binarySearch(list(range(100)),62)\n",
     "        "
@@ -567,17 +560,23 @@
     "# linear search is brute force going from 1- whatever number is to find what you are looking for.\n",
     "\n",
     "# probably just a loop that goes through every number until it reaches the target number within a set range\n",
-    "def linear_search(list_range,target):\n",
-    "    start = 0\n",
-    "    while  start in list_range != target:\n",
-    "        if start == target:\n",
+    "def linear_search(list_of_numbers,target):\n",
+    "    \n",
+    "    for index in range(len(list_of_numbers)):\n",
+    "        if list_of_numbers[index] == target:\n",
+    "            print(f'This is where your number is {index}')\n",
     "            break\n",
-    "        else:\n",
-    "            start +=1\n",
-    "            print('not it')\n",
+    "        \n",
+    "        print('Not found')\n",
+    "    index = 0\n",
+    "    while list_of_numbers[index]!= target:\n",
+    "        print('not found')\n",
+    "        index += 1\n",
+    "    print(f'This is where your number is {index}')\n",
+    "    \n",
+    "linear_search([1,32321,4242,30,4560,2013,100],30)\n",
     "\n",
-    "    print('This is your number', target)\n",
-    "linear_search(list(range(100)),30)\n"
+    "\n"
    ]
   }
  ],
