cleaned up code

--- a/Algorithms_INCLASS.ipynb
+++ b/Algorithms_INCLASS.ipynb
@@ -569,6 +569,8 @@
     "        \n",
     "        print('Not found')\n",
     "    index = 0\n",
+    "    \n",
+    "def linear_searchv2(list_of_numbers,target):\n",
     "    while list_of_numbers[index]!= target:\n",
     "        print('not found')\n",
     "        index += 1\n",
